# inkr-harness-tools

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  preview.yml  release.yml
src/inkr_harness_tools/: __init__.py  release_install.py  skill_sync.py
tests/integration/: test_skill_sync.py
tests/unit/: test_cli_entrypoint.py  test_release_install.py
