[project]
name = "inkr-harness-tools"
version = "0.1.0"
description = "Utility tools for inkr harness workflows"
readme = "README.md"
authors = [
    { name = "insleker", email = "bkinnightskytw@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
inkr-harness-tools = "inkr_harness_tools:main"
inkr-skill-sync = "inkr_harness_tools.skill_sync:main"
inkr-skill-symlink = "inkr_harness_tools.skill_sync:main"

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"
